fix(img): vertical alignement of img within latest post

--- a/assets/sass/_displays-override.scss
+++ b/assets/sass/_displays-override.scss
@@ -70,10 +70,17 @@
 
 //LATEST POSTS
 .wp-block-latest-posts__featured-image{
-  height: 180px;
+  height: 150px;
   margin-bottom: 1em;
+  overflow: hidden;
+  position: relative;
+  text-align: center;
   .wp-post-image{
-    max-height: 100%;
+    display: block;
+    position: absolute;
+    top: 0;
+    bottom: 0;
+    margin: auto;
   }
 }
 
